1997-12-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile: Don't define SWARMHOME if it already exists.

	* FNet.m: Use #import instead of #include for tkobjc.h.

	* FEntity.m: Use #import instead of #include for tkobjc.h and
	simtools.h.
